incorporate a few more changes to the api
