# api.pb.go
@@ -20,8 +20,7 @@
 		QueryPollRequest
 		QueryStatus
 		QueryResult
-		QueryURLRequests
-		QueryContentRequests
+		QueryRequests
 		QueryReply
 		QueryReplies
 		SeedResult
@@ -63,10 +62,8 @@ const _ = grpc.SupportPackageIsVersion4
 // Client API for API service
 
 type APIClient interface {
-	// Create new URL query
-	QueryURLV1(ctx context.Context, in *QueryURLRequests, opts ...grpc.CallOption) (*QueryReplies, error)
-	// Create new content query
-	QueryContentV1(ctx context.Context, in *QueryContentRequests, opts ...grpc.CallOption) (*QueryReplies, error)
+	// Create new query
+	QueryV1(ctx context.Context, in *QueryRequests, opts ...grpc.CallOption) (*QueryReplies, error)
 	// Results of active or unexpired query
 	QueryResultV1(ctx context.Context, in *QueryPollRequest, opts ...grpc.CallOption) (*QueryResult, error)
 }
@@ -79,18 +76,9 @@ func NewAPIClient(cc *grpc.ClientConn) APIClient {
 	return &aPIClient{cc}
 }
 
-func (c *aPIClient) QueryURLV1(ctx context.Context, in *QueryURLRequests, opts ...grpc.CallOption) (*QueryReplies, error) {
+func (c *aPIClient) QueryV1(ctx context.Context, in *QueryRequests, opts ...grpc.CallOption) (*QueryReplies, error) {
 	out := new(QueryReplies)
-	err := grpc.Invoke(ctx, "/zvelo.msg.API/QueryURLV1", in, out, c.cc, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
-func (c *aPIClient) QueryContentV1(ctx context.Context, in *QueryContentRequests, opts ...grpc.CallOption) (*QueryReplies, error) {
-	out := new(QueryReplies)
-	err := grpc.Invoke(ctx, "/zvelo.msg.API/QueryContentV1", in, out, c.cc, opts...)
+	err := grpc.Invoke(ctx, "/zvelo.msg.API/QueryV1", in, out, c.cc, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -109,10 +97,8 @@ func (c *aPIClient) QueryResultV1(ctx context.Context, in *QueryPollRequest, opt
 // Server API for API service
 
 type APIServer interface {
-	// Create new URL query
-	QueryURLV1(context.Context, *QueryURLRequests) (*QueryReplies, error)
-	// Create new content query
-	QueryContentV1(context.Context, *QueryContentRequests) (*QueryReplies, error)
+	// Create new query
+	QueryV1(context.Context, *QueryRequests) (*QueryReplies, error)
 	// Results of active or unexpired query
 	QueryResultV1(context.Context, *QueryPollRequest) (*QueryResult, error)
 }
@@ -121,38 +107,20 @@ func RegisterAPIServer(s *grpc.Server, srv APIServer) {
 	s.RegisterService(&_API_serviceDesc, srv)
 }
 
-func _API_QueryURLV1_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(QueryURLRequests)
+func _API_QueryV1_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(QueryRequests)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
 	if interceptor == nil {
-		return srv.(APIServer).QueryURLV1(ctx, in)
+		return srv.(APIServer).QueryV1(ctx, in)
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/zvelo.msg.API/QueryURLV1",
+		FullMethod: "/zvelo.msg.API/QueryV1",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(APIServer).QueryURLV1(ctx, req.(*QueryURLRequests))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
-func _API_QueryContentV1_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(QueryContentRequests)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(APIServer).QueryContentV1(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: "/zvelo.msg.API/QueryContentV1",
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(APIServer).QueryContentV1(ctx, req.(*QueryContentRequests))
+		return srv.(APIServer).QueryV1(ctx, req.(*QueryRequests))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -180,12 +148,8 @@ var _API_serviceDesc = grpc.ServiceDesc{
 	HandlerType: (*APIServer)(nil),
 	Methods: []grpc.MethodDesc{
 		{
-			MethodName: "QueryURLV1",
-			Handler:    _API_QueryURLV1_Handler,
-		},
-		{
-			MethodName: "QueryContentV1",
-			Handler:    _API_QueryContentV1_Handler,
+			MethodName: "QueryV1",
+			Handler:    _API_QueryV1_Handler,
 		},
 		{
 			MethodName: "QueryResultV1",
@@ -199,25 +163,22 @@ var _API_serviceDesc = grpc.ServiceDesc{
 func init() { proto.RegisterFile("zvelo/msg/api.proto", fileDescriptorApi) }
 
 var fileDescriptorApi = []byte{
-	// 308 bytes of a gzipped FileDescriptorProto
+	// 261 bytes of a gzipped FileDescriptorProto
 	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xe2, 0x12, 0xae, 0x2a, 0x4b, 0xcd,
 	0xc9, 0xd7, 0xcf, 0x2d, 0x4e, 0xd7, 0x4f, 0x2c, 0xc8, 0xd4, 0x2b, 0x28, 0xca, 0x2f, 0xc9, 0x17,
 	0xe2, 0x04, 0x0b, 0xea, 0xe5, 0x16, 0xa7, 0x4b, 0x89, 0x22, 0xe4, 0x0b, 0x4b, 0x53, 0x8b, 0x2a,
 	0x21, 0x2a, 0xa4, 0x64, 0xd2, 0xf3, 0xf3, 0xd3, 0x73, 0x52, 0x41, 0x7a, 0xf4, 0x13, 0xf3, 0xf2,
-	0xf2, 0x4b, 0x12, 0x4b, 0x32, 0xf3, 0xf3, 0x8a, 0x21, 0xb2, 0x46, 0x07, 0x98, 0xb8, 0x98, 0x1d,
-	0x03, 0x3c, 0x85, 0xe2, 0xb8, 0xb8, 0x02, 0x41, 0x9a, 0x42, 0x83, 0x7c, 0xc2, 0x0c, 0x85, 0xa4,
-	0xf5, 0xe0, 0xc6, 0xea, 0xc1, 0x84, 0x83, 0x52, 0x0b, 0x4b, 0x53, 0x8b, 0x4b, 0x8a, 0xa5, 0xc4,
-	0xd1, 0x25, 0x83, 0x52, 0x0b, 0x72, 0x32, 0x53, 0x8b, 0x95, 0xa4, 0x9a, 0x2e, 0x3f, 0x99, 0xcc,
-	0x24, 0xa2, 0xc4, 0xaf, 0x5f, 0x66, 0x08, 0x76, 0x42, 0x66, 0x6a, 0xb1, 0x7e, 0x69, 0x51, 0x8e,
-	0x15, 0xa3, 0x96, 0x50, 0x16, 0x17, 0x1f, 0x58, 0xad, 0x73, 0x7e, 0x5e, 0x49, 0x6a, 0x5e, 0x49,
-	0x98, 0xa1, 0x90, 0x3c, 0xba, 0x31, 0x50, 0x29, 0xc2, 0xf6, 0xc8, 0x81, 0xed, 0x91, 0x50, 0x12,
-	0x46, 0xb6, 0x27, 0x19, 0xa2, 0x1b, 0x64, 0x57, 0x2e, 0x17, 0x2f, 0x54, 0x7d, 0x71, 0x69, 0x4e,
-	0x09, 0x36, 0xef, 0x04, 0xe4, 0xe7, 0xe4, 0x40, 0xed, 0x91, 0x12, 0xc3, 0xb4, 0x06, 0xa4, 0x4d,
-	0x49, 0x1d, 0x6c, 0x8b, 0xa2, 0x90, 0x3c, 0xb2, 0x2d, 0x45, 0x60, 0x39, 0xfd, 0xea, 0x22, 0x88,
-	0xe6, 0xf8, 0xcc, 0x94, 0x5a, 0x27, 0xbb, 0x0b, 0x0f, 0xe5, 0x18, 0x6e, 0x3c, 0x94, 0x63, 0x78,
-	0xf0, 0x50, 0x8e, 0xf1, 0xc3, 0x43, 0x39, 0xc6, 0x86, 0x47, 0x72, 0x8c, 0x2b, 0x1e, 0xc9, 0x31,
-	0x9e, 0x78, 0x24, 0xc7, 0x78, 0xe1, 0x91, 0x1c, 0xe3, 0x83, 0x47, 0x72, 0x8c, 0x2f, 0x1e, 0xc9,
-	0x31, 0x7c, 0x78, 0x24, 0xc7, 0x38, 0xe1, 0xb1, 0x1c, 0x43, 0x14, 0x0f, 0xc4, 0xc6, 0x4c, 0x70,
-	0x64, 0x25, 0xb1, 0x81, 0x63, 0xc2, 0x18, 0x10, 0x00, 0x00, 0xff, 0xff, 0x41, 0xf0, 0x69, 0x1c,
-	0xe0, 0x01, 0x00, 0x00,
+	0xf2, 0x4b, 0x12, 0x4b, 0x32, 0xf3, 0xf3, 0x8a, 0x21, 0xb2, 0x46, 0xfb, 0x19, 0xb9, 0x98, 0x1d,
+	0x03, 0x3c, 0x85, 0x82, 0xb8, 0xd8, 0x03, 0x41, 0x9a, 0xc2, 0x0c, 0x85, 0x24, 0xf4, 0xe0, 0x66,
+	0xea, 0x81, 0xc5, 0x82, 0x52, 0x0b, 0x4b, 0x53, 0x8b, 0x4b, 0x8a, 0xa5, 0xc4, 0x31, 0x65, 0x0a,
+	0x72, 0x32, 0x53, 0x8b, 0x95, 0x44, 0x9a, 0x2e, 0x3f, 0x99, 0xcc, 0xc4, 0xa7, 0xc4, 0xa9, 0x5f,
+	0x66, 0x08, 0xb1, 0xdc, 0x8a, 0x51, 0x4b, 0x28, 0x85, 0x8b, 0x17, 0xaa, 0xaa, 0xb8, 0x34, 0xa7,
+	0x24, 0xcc, 0x50, 0x48, 0x1a, 0x5d, 0x7f, 0x40, 0x7e, 0x4e, 0x0e, 0xd4, 0x74, 0x29, 0x31, 0x4c,
+	0xc3, 0x41, 0xda, 0x94, 0xe4, 0xc0, 0x66, 0x4b, 0x08, 0x89, 0xc1, 0xcd, 0xd6, 0xaf, 0x2e, 0x82,
+	0xe8, 0x89, 0xcf, 0x4c, 0xa9, 0x75, 0xb2, 0xbb, 0xf0, 0x50, 0x8e, 0xe1, 0xc6, 0x43, 0x39, 0x86,
+	0x07, 0x0f, 0xe5, 0x18, 0x3f, 0x3c, 0x94, 0x63, 0x6c, 0x78, 0x24, 0xc7, 0xb8, 0xe2, 0x91, 0x1c,
+	0xe3, 0x89, 0x47, 0x72, 0x8c, 0x17, 0x1e, 0xc9, 0x31, 0x3e, 0x78, 0x24, 0xc7, 0xf8, 0xe2, 0x91,
+	0x1c, 0xc3, 0x87, 0x47, 0x72, 0x8c, 0x13, 0x1e, 0xcb, 0x31, 0x44, 0xf1, 0x40, 0x2c, 0xca, 0x04,
+	0x87, 0x55, 0x12, 0x1b, 0x38, 0x20, 0x8c, 0x01, 0x01, 0x00, 0x00, 0xff, 0xff, 0xdc, 0xd1, 0xa0,
+	0x2c, 0x5f, 0x01, 0x00, 0x00,
 }
